Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-38008

COUCHBASE_NUM_VBUCKETS = 8 no longer works with memcached

    XMLWordPrintable

Details

    • Untriaged
    • Unknown

    Description

      cd ns_server
      make dataclean
      export COUCHBASE_NUM_VBUCKETS=8
      ./cluster_run -n 1

      initialize cluster and create bucket "test"

      Observe the following in memcached.log:

      2020-02-20T14:16:14.268268-08:00 INFO (test) EPEngine::initialize: using configuration:"max_size=1620049920;dbname=/Users/artem/work/cheshirecat/ns_server/data/n_0/data/test;backend=couchdb;couch_bucket=test;max_vbuckets=8;alog_path=/Users/artem/work/cheshirecat/ns_server/data/n_0/data/test/access.log;data_traffic_enabled=false;max_num_workers=3;uuid=fcef0dfa98df6b51d452abd115934bee;conflict_resolution_type=seqno;bucket_type=persistent;item_eviction_policy=value_only;max_ttl=0;ht_locks=47;compression_mode=passive;failpartialwarmup=false"
      2020-02-20T14:16:14.268287-08:00 WARNING (test) Invalid configuration: Shards must be equal or less than max number of vbuckets
      

      I know that COUCHBASE_NUM_VBUCKETS <> 1024 is not officially supported, but COUCHBASE_NUM_VBUCKETS = 8 is quite a time saver for development tests

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            artem Artem Stemkovski
            artem Artem Stemkovski
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty