MB-38008: Allow #shards to exceed #vbuckets

While the user will get no benefit in having more shards than vBuckets
(in terms of performance), there's nothing functionally wrong with it,
so relax the constraint.

Change-Id: Ie9923911c4c64cd6fb6ca1ad37f4fb1f72c4e2f5
Reviewed-on: http://review.couchbase.org/c/kv_engine/+/122786
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: James Harrison <james.harrison@couchbase.com>
Reviewed-by: Paolo Cocchi <paolo.cocchi@couchbase.com>